// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fixtures > tests/fixtures/ElCard.vue 1`] = `
"import { defineComponent, openBlock, createElementBlock, renderSlot } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /* @__PURE__ */ defineComponent({
  __name: \\"ElCard\\",
  setup(__props) {
    console.log(\\"ElCard\\");
    return (_ctx, _cache) => {
      return openBlock(), createElementBlock(\\"div\\", null, [
        renderSlot(_ctx.$slots, \\"default\\")
      ]);
    };
  }
});

const elCard = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { elCard };
"
`;

exports[`fixtures > tests/fixtures/UPPER-CASE.vue 1`] = `
"import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /* @__PURE__ */ defineComponent({
  __name: \\"UPPER-CASE\\",
  setup(__props) {
    console.log(\\"UPPER-CASE\\");
    return () => {
    };
  }
});

const upperCase = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { upperCase };
"
`;

exports[`fixtures > tests/fixtures/basic.vue 1`] = `
"import { defineComponent, openBlock, createElementBlock, renderSlot } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /* @__PURE__ */ defineComponent({
  __name: \\"basic\\",
  setup(__props) {
    console.log(\\"basic\\");
    return (_ctx, _cache) => {
      return openBlock(), createElementBlock(\\"div\\", null, [
        renderSlot(_ctx.$slots, \\"default\\")
      ]);
    };
  }
});

const basic = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { basic };
"
`;

exports[`fixtures > tests/fixtures/el-button.vue 1`] = `
"import { defineComponent, openBlock, createElementBlock, renderSlot } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /* @__PURE__ */ defineComponent({
  __name: \\"el-button\\",
  setup(__props) {
    console.log(\\"el-button\\");
    return (_ctx, _cache) => {
      return openBlock(), createElementBlock(\\"div\\", null, [
        renderSlot(_ctx.$slots, \\"default\\")
      ]);
    };
  }
});

const elButton = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { elButton };
"
`;

exports[`fixtures > tests/fixtures/my_button.vue 1`] = `
"import { defineComponent, openBlock, createElementBlock, renderSlot } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /* @__PURE__ */ defineComponent({
  __name: \\"my_button\\",
  setup(__props) {
    console.log(\\"my_button\\");
    return (_ctx, _cache) => {
      return openBlock(), createElementBlock(\\"div\\", null, [
        renderSlot(_ctx.$slots, \\"default\\")
      ]);
    };
  }
});

const myButton = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { myButton };
"
`;
